syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AnimatorParameterValueInfo {
	uint32 para_type = 1;
	oneof paraVal {
		float float_val = 3;
		int32 int_val = 2;
		bool bool_val = 4;
	}
}