syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "Vector.proto";


message CurVehicleInfo {
	uint32 vehicle_type = 5;
	uint32 gadget_id = 3;
	uint32 pos = 2;
	uint32 entity_id = 1;
	Vector vehicle_rot = 6;
	Vector vehicle_pos = 4;
}