syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AnimatorParameterValueInfoPair.proto";
import "AbilitySyncStateInfo.proto";
import "Vector.proto";
import "EntityRendererChangedInfo.proto";
import "EntityClientExtraInfo.proto";
import "SceneEntityAiInfo.proto";


message EntityAuthorityInfo {
	EntityClientExtraInfo client_extra_info = 6;
	Vector born_pos = 4;
	EntityRendererChangedInfo renderer_changed_info = 2;
	SceneEntityAiInfo ai_info = 3;
	AbilitySyncStateInfo ability_info = 1;
	repeated AnimatorParameterValueInfoPair pose_para_list = 5;
}