syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AnimatorParameterValueInfoPair.proto";
import "SceneNpcInfo.proto";
import "MotionInfo.proto";
import "FightPropPair.proto";
import "SceneAvatarInfo.proto";
import "ProtEntityType.proto";
import "SceneMonsterInfo.proto";
import "EntityEnvironmentInfo.proto";
import "ServerBuff.proto";
import "SceneGadgetInfo.proto";
import "EntityClientData.proto";
import "EntityAuthorityInfo.proto";
import "PropPair.proto";


message SceneEntityInfo {
	string name = 3;
	uint32 last_move_reliable_seq = 18;
	uint32 last_move_scene_time_ms = 17;
	uint32 life_state = 7;
	uint32 entity_id = 2;
	ProtEntityType entity_type = 1;
	EntityClientData entity_client_data = 19;
	MotionInfo motion_info = 4;
	EntityAuthorityInfo entity_authority_info = 21;
	repeated string tag_list = 22;
	repeated FightPropPair fight_prop_list = 6;
	repeated EntityEnvironmentInfo entity_environment_info_list = 20;
	repeated PropPair prop_list = 5;
	repeated AnimatorParameterValueInfoPair animator_para_list = 9;
	repeated ServerBuff server_buff_list = 23;
	oneof entity {
		SceneNpcInfo npc = 12;
		SceneGadgetInfo gadget = 13;
		SceneAvatarInfo avatar = 10;
		SceneMonsterInfo monster = 11;
	}
}