syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "SceneTeamAvatar.proto";


message SceneTeamUpdateNotify {
	bool is_in_mp = 12;
	repeated SceneTeamAvatar scene_team_avatar_list = 1;
}